# pybq

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  demo.py  np_demo.py  optimal_kmer.py  py_kmer.py  pyproject.toml  ref-kmer.sh  rust_kmer.py  sanity.py  test.fa  test.vbq
python/pybq/: __init__.py
src/: lib.rs  test_build.rs
src/core/: mod.rs  popcnt_counter.rs  record_counter.rs  types.rs
src/core/counters/: grep.rs  kmer.rs  mod.rs
src/python/: bq_reader.rs  mod.rs  module.rs  reader.rs
src/python/reader/: mod.rs  variant.rs
